Add chefinstrument logging to /opt/chef.log and make it available as screen chef